--- a/test2.html
+++ b/test2.html
@@ -11,14 +11,110 @@
   <title>Amir Semmo - Portfolio</title>
   <meta name="description" content="Interactive graphics engineer and research assistant in the Computer Graphics Systems group at the Hasso Plattner Institute, Germany.
 ">
+
+  <!-- Bootstrap Core CSS -->
+  <!-- themes (*preferred):
+    cerulean, cosmo*, cyborg, darkly*, flatly*, journal, lumen, paper, readable, sandstone*, simplex*, slate*, spacelab, superhero*, united*, yeti* -->
+  <link rel="stylesheet" href="http://bootswatch.com/yeti/bootstrap.min.css">
+
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="//blueimp.github.io/Gallery/css/blueimp-gallery.min.css">
+  <link rel="stylesheet" href="/css/scrolling-nav.css">
+  <link rel="stylesheet" href="/css/portfolio.css">
+  <link rel="stylesheet" href="/css/hoverex-all.css">
   <link rel="stylesheet" href="/css/unslider.css">
   <link rel="stylesheet" href="/css/unslider-dots.css">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+  <![endif]-->
+
+  <link rel="canonical" href="http://amirsemmo.de/test.html">
 </head>
 
 
-<body>
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+
+
+<!-- Google Analytics -->
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-59261228-1', 'auto'); ga('send', 'pageview');
+</script>
+
+
+
+<!-- Navigation -->
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header page-scroll">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+       <a class="navbar-brand page-scroll" href="#page-top">Interactive Graphics Engineer</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+      <ul class="nav navbar-nav navbar-right">
+        <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
+        <li class="hidden"><a class="page-scroll" href="#page-top"></a></li>
+        <li><a class="page-scroll" href="#publications">Publications</a></li>
+        <li><a class="page-scroll" href="#talks">Talks</a></li>
+        <li><a class="page-scroll" href="#teaching">Teaching</a></li>
+		<li><a class="page-scroll" href="#activities">Professional Activities</a></li>
+		<li><a class="page-scroll" href="#videos">Videos</a></li>
+        <li><a class="page-scroll" href="#contact">Contact</a></li>
+      </ul>
+    </div>
+
+  </div>
+</nav>
+
+
+
+<!-- Page Header -->
+<header class="intro-header">
+  <div class="container">
+
+    <div class="row portrait">
+      <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2">
+        <img class="img-responsive img-thumbnail center-block" src="/img/amir-semmo-2012.jpg" alt="portrait">
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2 text-center">
+        <h1>Amir Semmo</h1>
+        <hr class="small">
+        <p class="lead"><span class="text-danger">Interactive graphics engineer</span> and <span class="text-danger">research assistant</span> in the Computer Graphics Systems group at the <a href="http://www.hpi.de" target="_blank">Hasso Plattner Institute</a>, Germany.<br><br>Specialized in real-time rendering and shading, non-photorealistic rendering, computational aesthetics / cartographic design, and geovisualization.
+</p>
+      </div>
+    </div>
+
+    <noscript>
+      <div class="row">
+        <div class="col-md-8 col-md-offset-2 text-center">
+          <div class="alert alert-danger" role="alert">Enable JavaScript to unlock Galleries, BibTeXs, and the Contact Form.</div>
+        </div>
+      </div>
+    </noscript>
+
+  </div>
+</header>
+
 
 <!-- Carousel -->
+	  <div>
+		<div>
+			
+			<div>
 			<div class="my-slider">
 			<ul>
 				
@@ -65,6 +161,10 @@
 				
 			</ul>
 			</div>
+			</div><!-- portfolio -->
+		</div><!-- portfolio container -->
+	  </div><!--/Portfoliowrap -->
+
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="/js/unslider-min.js"></script>
 
